--- a/fetch-example/package.json
+++ b/fetch-example/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "alpinejs": "^3.13.3"
+    "alpinejs": "^3.13.3",
+    "prompt-sync": "^4.2.0"
   }
 }
